REGRESSION (r92823): Background color not preserved when copying and pasting a table row https://bugs.webkit.org/show_bug.cgi?id=75330

Reviewed by Tony Chang.

Source/WebCore:

The bug was caused by the background color of the wrapping style overriding the background color
in a matched rule of a highest element to be serialized. Fixed the bug by removing the conflicting
background color prior to the merge.

Tests: editing/pasteboard/copy-element-with-conflicting-background-color-from-rule-expected.html
       editing/pasteboard/copy-element-with-conflicting-background-color-from-rule.html

* editing/EditingStyle.cpp:
(WebCore::editingStyleFromComputedStyle):
(WebCore::EditingStyle::removeStyleAddedByNode):
(WebCore::EditingStyle::removeStyleConflictingWithStyleOfNode):

LayoutTests:

Add a regression test.

* editing/pasteboard/copy-element-with-conflicting-background-color-from-rule-expected.html: Added.
* editing/pasteboard/copy-element-with-conflicting-background-color-from-rule.html: Added.


Canonical link: https://commits.webkit.org/92343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104068 268f45cc-cd09-0410-ab3c-d52691b4dbfc