Source/WebCore/dom/Element.cpp
@@ -706,7 +706,10 @@ void Element::updateAfterAttributeChanged(Attribute* attr)
     
 void Element::recalcStyleIfNeededAfterAttributeChanged(Attribute* attr)
 {
-    if (document()->attached() && document()->styleSelector()->hasSelectorForAttribute(attr->name().localName()))
+    if (!needsStyleRecalc())
+        return;
+
+    if (document()->attached() && document()->styleSelectorIfExists() && document()->styleSelectorIfExists()->hasSelectorForAttribute(attr->name().localName()))
         setNeedsStyleRecalc();
 }
 
